<resources>
    <string name="app_name">Android_Practice_LoginPage</string>
    <!--sign in-->
    <string name="signin_id_tv">아이디</string>
    <string name="signin_idhint_et">아이디를 입력하세요</string>
    <string name="signin_password_tv">비밀번호</string>
    <string name="signin_passwordhint_et">비밀번호를 입력하세요.</string>
    <string name="signin_login_btn">로그인</string>
    <string name="signin_signup_btn">회원가입</string>

    <!--sign up-->
    <string name="signup_name_tv">이름</string>
    <string name="signup_name_et">이름을 입력하세요</string>
    <string name="signup_id_tv">아이디</string>
    <string name="signup_id_et">아이디를 입력하세요</string>
    <string name="signup_password_tv">비밀번호</string>
    <string name="signup_password_et">비밀번호를 입력하세요</string>
    <string name="signup_signup_btn">회원가입</string>

    <!--home-->
    <string name="home_id_tv">아이디</string>
    <string name="home_name_tv">이름 : 이충환</string>
    <string name="home_age_tv">나이 : 26</string>
    <string name="home_mbti_tv">MBTI : ISFJ</string>
    <string name="home_exit_btn">종료</string>
</resources>